--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Database Configuration 
 DB_ENGINE=mssql 
-DB_NAME=SISEVOL_QUA 
+DB_NAME=SISEVOL
 DB_USER=SA 
 DB_PASSWORD=AdminP@ssBI2022 
 DB_HOST=127.0.0.1 
